--- a/vitam-conf-dev/conf/metadata/metadata.conf
+++ b/vitam-conf-dev/conf/metadata/metadata.conf
@@ -1,8 +1,12 @@
 workspaceUrl: http://workspace.service.consul:8201/
 
-# Ontology cache settings
+# Ontology cache settings (max entries in cache & retention timeout in seconds)
 ontologyCacheMaxEntries: 100
 ontologyCacheTimeoutInSeconds: 300
+
+# Archive Unit Profile cache settings (max entries in cache & retention timeout in seconds)
+archiveUnitProfileCacheMaxEntries: 100
+archiveUnitProfileCacheTimeoutInSeconds: 300
 
 # Configuration MongoDB
 mongoDbNodes:
