5563 - bulk update classification

--- a/vitam-conf-dev/conf/worker/vitam.conf
+++ b/vitam-conf-dev/conf/worker/vitam.conf
@@ -17,5 +17,5 @@ reclassificationMaxUnitsThreshold: 10000
 reclassificationMaxGuildListSizeInLogbookOperation: 1000
 
 classificationLevel :
-  allowList :  [Secret Défense, Confidentiel Défense]
+  allowList :  [Secret Défense, Confidentiel Défense, Non protégé]
   authorizeNotDefined: true
