--- a/vitam-conf-dev/conf/access-external/vitam.conf
+++ b/vitam-conf-dev/conf/access-external/vitam.conf
@@ -8,3 +8,7 @@ maxDelayUnusedConnection : 5000
 delayValidationAfterInactivity : 2500
 tenants :  [ "0", "1", "2", "3", "4", "5", "6", "7", "8", "9" ]
 adminTenant : 1
+
+classificationLevel :
+  allowList :  [Secret Défense, Confidentiel Défense, Non protégé]
+  authorizeNotDefined: true
