--- a/deployment/ansible-vitam-extra/roles/ihm-recette-front/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/ihm-recette-front/tasks/main.yml
@@ -4,7 +4,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   tags:
     - update_package_vitam
