--- a/deployment/ansible-vitam-extra/roles/vitam_browser/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/vitam_browser/tasks/main.yml
@@ -22,7 +22,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: install apache web server
@@ -31,7 +31,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 
