--- a/deployment/ansible-vitam/roles/logstash/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/logstash/tasks/main.yml
@@ -12,7 +12,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
 
@@ -23,7 +23,7 @@
     default_release: "{{ ansible_distribution_release }}-backports"
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when:
     - ansible_os_family == "Debian"
@@ -35,7 +35,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when:
     - ansible_os_family == "Debian"
@@ -47,7 +47,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   notify:
     - restart logstash
