--- a/deployment/ansible-vitam/roles/mongos/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongos/tasks/main.yml
@@ -5,7 +5,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   notify:
     - restart mongos
