--- a/deployment/ansible-vitam-extra/roles/bootstrap_repo/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/bootstrap_repo/tasks/main.yml
@@ -30,7 +30,7 @@
       update_cache: yes
     register: result
     retries: "{{ packages_install_retries_number }}"
-    until: result | succeeded
+    until: result is succeeded
     delay: "{{ packages_install_retries_delay }}"
 
   when: ansible_os_family == "Debian"
