--- a/deployment/ansible-vitam-extra/roles/docker/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/docker/tasks/main.yml
@@ -11,7 +11,7 @@
       state: absent
     register: result
     retries: "{{ packages_install_retries_number }}"
-    until: result | succeeded
+    until: result is succeeded
     delay: "{{ packages_install_retries_delay }}"
     with_items:
     - docker
@@ -33,7 +33,7 @@
       state: present
     register: result
     retries: "{{ packages_install_retries_number }}"
-    until: result | succeeded
+    until: result is succeeded
     delay: "{{ packages_install_retries_delay }}"
 
   - name: add GPG docker repo key
@@ -48,7 +48,7 @@
       state: present
     register: result
     retries: "{{ packages_install_retries_number }}"
-    until: result | succeeded
+    until: result is succeeded
     delay: "{{ packages_install_retries_delay }}"
 
   - name: check docker repo are present
@@ -63,7 +63,7 @@
       update_cache: yes
     register: result
     retries: "{{ packages_install_retries_number }}"
-    until: result | succeeded
+    until: result is succeeded
     delay: "{{ packages_install_retries_delay }}"
 
   - name: installer docker & pip
@@ -72,7 +72,7 @@
       state: latest
     register: result
     retries: "{{ packages_install_retries_number }}"
-    until: result | succeeded
+    until: result is succeeded
     delay: "{{ packages_install_retries_delay }}"
     with_items:
       - docker-ce
@@ -105,7 +105,7 @@
       state: latest
     register: result
     retries: "{{ packages_install_retries_number }}"
-    until: result | succeeded
+    until: result is succeeded
     delay: "{{ packages_install_retries_delay }}"
     with_items:
     - docker
