--- a/deployment/ansible-vitam-extra/roles/metricbeat/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/metricbeat/tasks/main.yml
@@ -6,7 +6,7 @@
     state: absent
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: install metricbeat package
@@ -15,7 +15,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: apply metricbeat configuration
