--- a/deployment/ansible-vitam-extra/roles/openldap_server/tasks/install_ldap.yml
+++ b/deployment/ansible-vitam-extra/roles/openldap_server/tasks/install_ldap.yml
@@ -9,7 +9,7 @@
     state: present
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   with_items: "{{ openldap_server_pkgs }}"
   when: ansible_os_family == 'RedHat'
@@ -22,7 +22,7 @@
     update_cache: yes
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   with_items: "{{ openldap_server_pkgs }}"
   environment: env
