--- a/deployment/ansible-vitam-extra/roles/packetbeat/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/packetbeat/tasks/main.yml
@@ -6,7 +6,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
 
@@ -15,7 +15,7 @@
     name: libpcap0.8
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "Debian"
 
@@ -26,7 +26,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: setup Packetbeat configuration file
