--- a/deployment/ansible-vitam/roles/antivirus/tasks/clamav.yml
+++ b/deployment/ansible-vitam/roles/antivirus/tasks/clamav.yml
@@ -6,7 +6,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
 
@@ -16,7 +16,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "Debian"
 
