--- a/deployment/ansible-vitam/roles/functional_administration/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/functional_administration/tasks/main.yml
@@ -6,7 +6,7 @@
     state: present
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: Copy the functional_administration reconstruction script
