--- a/deployment/ansible-vitam/roles/logbook/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/logbook/tasks/main.yml
@@ -8,7 +8,7 @@
     state: present
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: Copy the logbook reconstruction script
