--- a/deployment/ansible-vitam/roles/mongo_common/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongo_common/tasks/main.yml
@@ -8,7 +8,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: Disable mongodb default service
