--- a/deployment/ansible-vitam/roles/normalize-host/tasks/centos.yml
+++ b/deployment/ansible-vitam/roles/normalize-host/tasks/centos.yml
@@ -7,7 +7,7 @@
     state: present
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when:
     - disable_internet_repositories_install == false
