--- a/deployment/ansible-vitam/roles/normalize-host/tasks/debian.yml
+++ b/deployment/ansible-vitam/roles/normalize-host/tasks/debian.yml
@@ -15,7 +15,7 @@
     update_cache: yes
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   tags:
     - update_package_vitam
@@ -26,5 +26,5 @@
     state: present
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
