--- a/deployment/ansible-vitam/roles/vitam/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/main.yml
@@ -8,7 +8,7 @@
     default_release: "{{ ansible_distribution_release }}-backports"
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when:
     - ansible_os_family == "Debian"
@@ -20,7 +20,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when:
     - ansible_os_family == "Debian"
@@ -35,7 +35,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   tags:
     - update_package_vitam
@@ -64,7 +64,7 @@
         state: present
       register: result
       retries: "{{ packages_install_retries_number }}"
-      until: result | succeeded
+      until: result is succeeded
       delay: "{{ packages_install_retries_delay }}"
       tags:
         - update_package_vitam
