--- a/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
@@ -24,7 +24,7 @@
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: Ensure mod_ssl is installed (CentOS)
@@ -33,7 +33,7 @@
     state: present
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
 
