--- a/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
@@ -8,6 +8,7 @@
     apache_conf_dir: "conf.d"
     apache_user: "apache"
     apache_group: "apache"
+    mime_type_package: "mailcap"
   when: ansible_os_family == "RedHat"
 
 - name: Set apache service name for Debian
@@ -16,15 +17,16 @@
     apache_conf_dir: "sites-available"
     apache_user: "root"
     apache_group: "root"
+    mime_type_package: "mime-support"
   when: ansible_os_family == "Debian"
 
-- name: install apache2
+- name: install {{ mime_type_package }} & {{ apache_service }} packages
   package:
-    name: "{{ apache_service }}"
+    name: ["{{ mime_type_package }}","{{ apache_service }}"]
     state: latest
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
 
 - name: Ensure mod_ssl is installed (CentOS)
@@ -33,7 +35,7 @@
     state: present
   register: result
   retries: "{{ packages_install_retries_number }}"
-  until: result | succeeded
+  until: result is succeeded
   delay: "{{ packages_install_retries_delay }}"
   when: ansible_os_family == "RedHat"
 
@@ -131,6 +133,17 @@
   template:
     src: httpd_config
     dest: "/etc/{{ apache_service }}/{{ apache_conf_dir }}/zz_{{ vitam_reverse_external_dns }}.conf"
+    owner: "root"
+    mode: 0644
+  tags:
+    - update_package_vitam
+  notify:
+     - reload apache
+
+- name: add js & css to mod_mime
+  copy:
+    src: mime_vitam.conf
+    dest: "/etc/{{ apache_service }}/{{ apache_conf_dir }}/mime_vitam.conf"
     owner: "root"
     mode: 0644
   tags:
