--- a/deployment/environments/group_vars/all/offers_opts.yml
+++ b/deployment/environments/group_vars/all/offers_opts.yml
@@ -80,6 +80,10 @@ vitam_offers:
   #    swiftDomain: domain
   #    swiftUser: user
   #    swiftPassword: has to be set in vault-vitam.yml (encrypted) with same structure => DO NOT COMMENT OUT
+  # THIS PART IS ONLY FOR CLEANING (and mandatory for this use case)
+  #    swiftProjectId: related to OS_PROJECT_ID
+  #    swiftRegionName: related to OS_REGION_NAME
+  #    swiftInterface: related to OS_INTERFACE    
   # example_swift_v3:
   #    provider: openstack-swift-v3
   #    swiftKeystoneAuthUrl: https://keystone/v3
@@ -88,6 +92,11 @@ vitam_offers:
   #    swiftPassword: has to be set in vault-vitam.yml (encrypted) with same structure => DO NOT COMMENT OUT
   #    swiftProjectName: monTenant
   #    projectName: monTenant
+  # THIS PART IS ONLY FOR CLEANING (and mandatory for this use case)
+  #    swiftProjectId: related to OS_PROJECT_ID
+  #    swiftRegionName: related to OS_REGION_NAME
+  #    swiftInterface: related to OS_INTERFACE
+
   # swiftTrustStore: /chemin_vers_mon_fichier/monSwiftTrustStore.jks
   # swiftMaxConnectionsPerRoute: 200
   # swiftMaxConnections: 1000
