--- a/sources/common/common-database-vitam/common-database-private/pom.xml
+++ b/sources/common/common-database-vitam/common-database-private/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>log4j-core</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>net.javacrumbs.json-unit</groupId>
+			<artifactId>json-unit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 </project>
