--- a/deployment/environments/group_vars/all/vitam_vars.yml
+++ b/deployment/environments/group_vars/all/vitam_vars.yml
@@ -138,6 +138,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     accessinternal:
         vitam_component: access-internal
         host: "access-internal.service.{{ consul_domain }}"
@@ -153,6 +155,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     functional_administration:
         vitam_component: functional-administration
         host: "functional-administration.service.{{ consul_domain }}"
@@ -169,6 +173,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     elastickibanainterceptor:
         vitam_component: elastic-kibana-interceptor
         host: "elastic-kibana-interceptor.service.{{ consul_domain }}"
@@ -185,6 +191,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     batchreport:
         vitam_component: batch-report
         host: "batch-report.service.{{ consul_domain }}"
@@ -200,6 +208,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     ingestexternal:
         vitam_component: ingest-external
         # DNS record for the service:
@@ -230,6 +240,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     ingestinternal:
         vitam_component: ingest-internal
         host: "ingest-internal.service.{{ consul_domain }}"
@@ -245,6 +257,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     ihm_demo:
         vitam_component: ihm-demo
         host: "ihm-demo.service.{{ consul_domain }}"
@@ -279,6 +293,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     logbook:
         vitam_component: logbook
         host: "logbook.service.{{ consul_domain }}"
@@ -303,6 +319,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     metadata:
         vitam_component: metadata
         host: "metadata.service.{{ consul_domain }}"
@@ -319,6 +337,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     processing:
         vitam_component: processing
         host: "processing.service.{{ consul_domain }}"
@@ -336,6 +356,8 @@ vitam:
         performance_logger: "false"
         maxDistributionInMemoryBufferSize: 100000
         maxDistributionOnDiskBufferSize: 100000000
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     security_internal:
         vitam_component: security-internal
         host: "security-internal.service.{{ consul_domain }}"
@@ -351,6 +373,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     storageengine:
         vitam_component: storage
         host: "storage.service.{{ consul_domain }}"
@@ -376,6 +400,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     storageofferdefault:
         vitam_component: "offer"
         port_service: 9900
@@ -390,6 +416,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     worker:
         vitam_component: worker
         port_service: 9104
@@ -404,6 +432,8 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     workspace:
         vitam_component: workspace
         host: "workspace.service.{{ consul_domain }}"
@@ -419,3 +449,5 @@ vitam:
         logback_total_size_cap: "5GB"
         jvm_log: false
         performance_logger: "false"
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
