Manual cherry-pick MR6418 on R10

--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -24,6 +24,8 @@ vitam:
         jvm_log: false
         performance_logger: "false"
         reconstruction:
+        consul_check_business: 10 # value in seconds
+        consul_admin_check: 10 # value in seconds
     library:
         vitam_component: library
         host: "library.service.{{consul_domain}}"
@@ -39,6 +41,8 @@ vitam:
         jvm_log: false
         performance_logger: "false"
         reconstruction:
+        consul_check_business: 30 # value in seconds
+        consul_admin_check: 30 # value in seconds
 
 # Period units in seconds
 metricbeat:
